--- a/alembic_test_db.ini
+++ b/alembic_test_db.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = test_base
+script_location = test_db
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -36,13 +36,13 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to test_base/versions.  When using multiple version
+# to test_db/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator" below.
-# version_locations = %(here)s/bar:%(here)s/bat:test_base/versions
+# version_locations = %(here)s/bar:%(here)s/bat:test_db/versions
 
 # version path separator; As mentioned above, this is the character used to split
-# version_locations. The default within new alembic_test.ini files is "os", which uses os.pathsep.
+# version_locations. The default within new alembic_test_db.ini files is "os", which uses os.pathsep.
 # If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or commas.
 # Valid values for version_path_separator are:
 #
